build(env): change default host to local

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_TYPE="postgres"
-DSN="dbname=nellcorp sslmode=disable user=postgres password=root host=db"
+DSN="dbname=nellcorp sslmode=disable user=postgres password=root host=localhost"
 
 ENV="dev"
 DEBUG=true
